--- a/assurance.tex
+++ b/assurance.tex
@@ -32,8 +32,8 @@
 \node [anchor=south west, inner sep=0] at (0cm, 11.2cm) {\large \Aachen, \publicationDate};
 \node [anchor=south west, inner sep=0] at (0cm, 0.5cm) {\large \Aachen, \publicationDate};
 \draw [line cap=round, line width=0.5mm] (8.8cm, 17.11cm) -- (9.65cm, 17.11cm); % cross out "Arbeit"
-%\draw [line cap=round, line width=0.5mm] (9.75cm, 17.11cm) -- (11.70cm, 17.11cm); % cross out "Arbeit"
-\draw [line cap=round, line width=0.5mm] (0cm, 16.7cm) -- (1.8cm, 16.7cm); % cross out "Masterarbeit"
+\draw [line cap=round, line width=0.5mm] (9.75cm, 17.11cm) -- (11.70cm, 17.11cm); % cross out "Arbeit"
+%\draw [line cap=round, line width=0.5mm] (0cm, 16.7cm) -- (1.8cm, 16.7cm); % cross out "Masterarbeit"
 \end{tikzpicture}
 % \end{center}
 
