--- a/thesis.tex
+++ b/thesis.tex
@@ -231,7 +231,8 @@
 \newcommand{\publicationDate}{20. September 2018}
 \subject{Masterarbeit im Fach Informatik}
 \title{Unsupervised Learning of Neural Network Lexicon and
-	Cross-lingual Word Embedding}
+	Cross-lingual  
+	 Word Embedding}
 \newcommand{\Surname}{Geng}
 \newcommand{\Firstname}{Jiahui}
 \newcommand{\Aachen}{Aachen}
