--- a/experiments.tex
+++ b/experiments.tex
@@ -29,7 +29,7 @@
 		
 	\end{tabular}
 \end{table}
-\section{Cross-lingual Word Embedding}
+\section{Word Translation}
 \subsection{Baseline}
 \subsubsection{Corpus Size for Monolingual Embedding}
 \begin{table}[H]
@@ -143,7 +143,7 @@
 
 
 
-\section{Unspervised Machine Translation}
+\section{Sentence Translation}
 
 
 \subsection{Comprehensive Table}
